fix clipping on small screen sizes

--- a/input.scss
+++ b/input.scss
@@ -172,11 +172,21 @@ button:hover, a:hover {
     section {
         justify-content: center;
     }
+
+    form > p {
+        padding: 0;
+        width: 80%;
+    }
 }
 
 @media (max-width: 500px){
     #logo-container > div {
         margin-top: 1rem;
+    }
+
+    form {
+        flex-grow: 0;
+        width: 100%;
     }
 
     section {
